--- a/index.html
+++ b/index.html
@@ -3,294 +3,222 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-<title>Runner Mission Locale</title>
+<title>Runner Mission Locale - Pro Edition</title>
 
 <style>
-html,body{
-  margin:0;
-  padding:0;
-  background:#0d47a1;
-  font-family:Arial,Helvetica,sans-serif;
-  overflow:hidden;
-}
+  :root {
+    --primary: #0d47a1;
+    --accent: #ffca28;
+    --danger: #e53935;
+    --sky: #87CEEB;
+  }
 
-#container{
-  width:100%;
-  max-width:900px;
-  margin:auto;
-  position:relative;
-}
+  html, body {
+    margin: 0; padding: 0;
+    background: var(--primary);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    overflow: hidden;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
 
-canvas{
-  width:100%;
-  height:auto;
-  display:block;
-  background:linear-gradient(#ffffff,#e3f2fd);
-  border-radius:14px;
-}
+  #container {
+    width: 100%;
+    max-width: 900px;
+    margin: auto;
+    position: relative;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+    border-radius: 14px;
+    overflow: hidden;
+  }
 
-.overlay{
-  position:absolute;
-  inset:0;
-  background:rgba(255,255,255,.96);
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-  text-align:center;
-  padding:20px;
-  z-index:10;
-}
+  canvas {
+    width: 100%;
+    height: auto;
+    display: block;
+    background: var(--sky);
+  }
 
-button{
-  padding:12px 28px;
-  margin-top:14px;
-  font-size:16px;
-  border:none;
-  border-radius:8px;
-  background:#ffca28;
-  cursor:pointer;
-}
+  .overlay {
+    position: absolute;
+    inset: 0;
+    background: rgba(255, 255, 255, 0.92);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 30px;
+    z-index: 10;
+    backdrop-filter: blur(4px);
+  }
 
-.qcm button{
-  width:100%;
-  margin:6px 0;
-}
+  h2 { color: var(--primary); margin-top: 0; }
 
-#footer{
-  text-align:center;
-  color:white;
-  margin:8px;
-  font-weight:bold;
-}
+  button {
+    padding: 14px 30px;
+    margin-top: 15px;
+    font-size: 18px;
+    font-weight: bold;
+    border: none;
+    border-radius: 50px;
+    background: var(--accent);
+    color: #333;
+    cursor: pointer;
+    transition: transform 0.2s, background 0.2s;
+    box-shadow: 0 4px 0 #c79100;
+  }
+
+  button:active {
+    transform: translateY(3px);
+    box-shadow: 0 1px 0 #c79100;
+  }
+
+  .qcm button {
+    width: 100%;
+    max-width: 400px;
+    margin: 8px 0;
+    text-align: left;
+    padding: 15px 25px;
+  }
+
+  #footer {
+    text-align: center;
+    color: white;
+    padding: 15px;
+    font-size: 14px;
+    opacity: 0.8;
+  }
+
+  #rotate { display: none; background: var(--primary); color: white; }
+  
+  @media (orientation: portrait) {
+    #rotate { display: flex; }
+    #game, #menu, #question { display: none !important; }
+  }
 </style>
 </head>
-
 <body>
 
 <div id="container">
   <canvas id="game"></canvas>
 
   <div id="rotate" class="overlay">
-    <h2>Veuillez retourner votre téléphone</h2>
-    <p>Le jeu fonctionne uniquement en mode paysage.</p>
+    <h2>📱 Mode Paysage Requis</h2>
+    <p>Tourne ton téléphone pour commencer l'aventure !</p>
   </div>
 
-  <div id="menu" class="overlay" style="display:none">
-    <h2>Runner Mission Locale</h2>
-    <p>
-      🎮 Saute pour éviter les obstacles<br>
-      🖱️ Clic / Toucher / Espace<br><br>
-      ❓ En cas de collision, réponds à une question professionnelle pour continuer
-    </p>
-    <button id="startBtn">Démarrer</button>
+  <div id="menu" class="overlay">
+    <h2>Mission Locale Runner</h2>
+    <p><b>Objectif :</b> Parcourez la plus longue distance possible.<br>
+    <b>Bonus :</b> Répondez correctement pour survivre aux obstacles !</p>
+    <p style="font-size: 0.9em;">⌨️ ESPACE ou 👆 TOUCHER pour sauter (Double saut possible)</p>
+    <button id="startBtn">C'EST PARTI !</button>
   </div>
 
   <div id="question" class="overlay qcm" style="display:none"></div>
-  <div id="countdown" class="overlay" style="font-size:72px;display:none"></div>
+  <div id="countdown" class="overlay" style="font-size:80px; font-weight:bold; color:var(--primary); display:none"></div>
 </div>
 
-<div id="footer">La Mission Locale vous souhaite un bon jeu.</div>
+<div id="footer">Propulsé par la Mission Locale — Accompagnement & Avenir</div>
 
 <script>
-/* ===== CANVAS ===== */
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
-/* ===== ORIENTATION & SIZE ===== */
-function resize(){
-  if(window.innerHeight > window.innerWidth){
-    document.getElementById("rotate").style.display="flex";
-    canvas.style.display="none";
-    return;
-  }
-  document.getElementById("rotate").style.display="none";
-  canvas.style.display="block";
-  document.getElementById("menu").style.display="flex";
-
-  const w = document.getElementById("container").clientWidth;
-  const h = Math.min(window.innerHeight*0.7, w*0.5);
-  canvas.width = w;
-  canvas.height = h;
-}
-window.addEventListener("resize",resize);
-resize();
-
-/* ===== QUESTIONS (20 uniques) ===== */
-const QUESTIONS = [
-{q:"Quel est l’objectif principal de la Mission Locale ?",c:["Accompagner les jeunes vers l’emploi et l’autonomie","Fournir un emploi immédiat","Remplacer l’école"],a:0},
-{q:"Un CV efficace doit être :",c:["Clair et structuré","Très long","Original à tout prix"],a:0},
-{q:"Le savoir-être correspond :",c:["Au comportement professionnel","Aux diplômes","À l’expérience"],a:0},
-{q:"Avant un entretien, il est recommandé :",c:["De se préparer","D’improviser","De lire le CV sur place"],a:0},
-{q:"Arriver à l’heure montre :",c:["Du sérieux","De la rigidité","De la chance"],a:0},
-{q:"Un refus peut permettre :",c:["De progresser","D’abandonner","De se décourager"],a:0},
-{q:"Travailler en équipe demande :",c:["Communication","Autorité","Compétition"],a:0},
-{q:"Un projet professionnel peut :",c:["Évoluer avec le temps","Être figé","Être imposé"],a:0},
-{q:"Une lettre de motivation doit être :",c:["Personnalisée","Standardisée","Très courte"],a:0},
-{q:"Un stage sert principalement à :",c:["Découvrir un métier","Remplacer un salarié","Éviter l’école"],a:0},
-{q:"Demander conseil montre :",c:["Une démarche active","Une faiblesse","Un manque"],a:0},
-{q:"La ponctualité est :",c:["Essentielle","Optionnelle","Secondaire"],a:0},
-{q:"Un CV clair permet :",c:["Une lecture rapide","De cacher des lacunes","D’impressionner visuellement"],a:0},
-{q:"Une compétence peut être :",c:["Technique ou comportementale","Uniquement scolaire","Innée"],a:0},
-{q:"La motivation se remarque par :",c:["L’attitude","Les paroles seules","Le diplôme"],a:0},
-{q:"Se renseigner sur une entreprise permet :",c:["De mieux répondre","De perdre du temps","D’éviter l’entretien"],a:0},
-{q:"Un parcours professionnel est souvent :",c:["Progressif","Linéaire","Parfait"],a:0},
-{q:"Être autonome signifie :",c:["Savoir s’organiser","Travailler seul","Ne jamais demander"],a:0},
-{q:"La Mission Locale accompagne :",c:["Les jeunes de 16 à 25 ans","Tous les âges","Uniquement les diplômés"],a:0},
-{q:"Le respect au travail est :",c:["Indispensable","Négociable","Optionnel"],a:0}
-];
-
+/* CONFIGURATION */
+let state = "menu";
+let score = 0, level = 1, speed = 4, immunity = 0;
+const gravity = 0.6;
+const player = { x: 100, y: 0, r: 24, vy: 0, jumps: 0, angle: 0 };
+let obstacles = [];
+let clouds = [];
+let lastSpawn = 0;
 let questionDeck = [];
 
-/* ===== GAME STATE ===== */
-let state="menu", score=0, level=1, speed=3, immunity=0;
-const gravity=0.45;
-const player={x:140,y:0,r:22,vy:0,jumps:0};
-let obstacles=[], lastSpawn=0;
+const QUESTIONS = [
+  {q:"Quel est l’objectif principal de la Mission Locale ?",c:["Accompagner les jeunes vers l’emploi et l’autonomie","Fournir un emploi immédiat","Remplacer l’école"],a:0},
+  {q:"Un CV efficace doit être :",c:["Clair et structuré","Très long","Original à tout prix"],a:0},
+  {q:"Le savoir-être correspond :",c:["Au comportement professionnel","Aux diplômes","À l’expérience"],a:0},
+  {q:"Avant un entretien, il est recommandé :",c:["De se préparer","D’improviser","De lire le CV sur place"],a:0},
+  {q:"Arriver à l’heure montre :",c:["Du sérieux","De la rigidité","De la chance"],a:0},
+  {q:"Un refus peut permettre :",c:["De progresser","D’abandonner","De se décourager"],a:0},
+  {q:"Travailler en équipe demande :",c:["Communication","Autorité","Compétition"],a:0},
+  {q:"La Mission Locale accompagne :",c:["Les jeunes de 16 à 25 ans","Tous les âges","Uniquement les diplômés"],a:0}
+];
 
-/* ===== UTILS ===== */
-function ground(){ return canvas.height - 50; }
+/* INITIALISATION */
+function resize() {
+  const container = document.getElementById("container");
+  canvas.width = container.clientWidth;
+  canvas.height = 350; 
+  player.y = ground();
+}
+window.addEventListener("resize", resize);
+resize();
 
-/* ===== RESET ===== */
-function resetGame(){
-  score=0; level=1; speed=3;
-  obstacles=[];
-  player.y=ground(); player.vy=0; player.jumps=0;
-  immunity=120;
-  questionDeck=[...QUESTIONS].sort(()=>Math.random()-0.5);
+function ground() { return canvas.height - 60; }
+
+function resetGame() {
+  score = 0; level = 1; speed = 4;
+  obstacles = [];
+  clouds = Array.from({length: 5}, () => ({x: Math.random()*canvas.width, y: Math.random()*100, s: Math.random()*0.5 + 0.2}));
+  player.y = ground(); player.vy = 0; player.jumps = 0;
+  immunity = 0;
+  questionDeck = [...QUESTIONS].sort(() => Math.random() - 0.5);
 }
 
-/* ===== CONTROLS ===== */
-function jump(){
-  if(state==="play" && player.jumps<2){
-    player.vy=-14;
+/* INPUTS */
+function handleInput(e) {
+  if(e.type === "keydown" && e.code !== "Space") return;
+  if(state === "play" && player.jumps < 2) {
+    player.vy = -12;
     player.jumps++;
   }
 }
-window.addEventListener("keydown",e=>{ if(e.code==="Space") jump(); });
-canvas.addEventListener("click",jump);
-canvas.addEventListener("touchstart",jump);
+window.addEventListener("keydown", handleInput);
+canvas.addEventListener("touchstart", (e) => { e.preventDefault(); handleInput(e); }, {passive: false});
 
-/* ===== START ===== */
-document.getElementById("startBtn").onclick=()=>{
-  document.getElementById("menu").style.display="none";
+/* LOGIQUE DU JEU */
+document.getElementById("startBtn").onclick = () => {
+  document.getElementById("menu").style.display = "none";
   resetGame();
   startCountdown();
 };
 
-/* ===== COUNTDOWN ===== */
-function startCountdown(){
-  const cd=document.getElementById("countdown");
-  let t=3;
-  state="countdown";
-  cd.style.display="flex";
-  cd.textContent=t;
-  const i=setInterval(()=>{
-    t--; cd.textContent=t;
-    if(t===0){
+function startCountdown() {
+  const cd = document.getElementById("countdown");
+  let t = 3; state = "countdown";
+  cd.style.display = "flex";
+  cd.textContent = t;
+  const i = setInterval(() => {
+    t--; 
+    if(t > 0) cd.textContent = t;
+    else {
       clearInterval(i);
-      cd.style.display="none";
-      state="play";
+      cd.style.display = "none";
+      state = "play";
     }
-  },1000);
+  }, 800);
 }
 
-/* ===== QUESTION ===== */
-function showQuestion(){
-  state="question";
-  const box=document.getElementById("question");
-  const q=questionDeck.shift();
-  box.innerHTML="<h3>"+q.q+"</h3>";
-  q.c.forEach((txt,i)=>{
-    const b=document.createElement("button");
-    b.textContent=txt;
-    b.onclick=()=>{
-      box.style.display="none";
-      if(i===q.a){
-        immunity=120;
+function showQuestion() {
+  state = "question";
+  if(questionDeck.length === 0) questionDeck = [...QUESTIONS].sort(() => Math.random() - 0.5);
+  
+  const box = document.getElementById("question");
+  const q = questionDeck.shift();
+  box.innerHTML = `<h2 style="font-size:1.2em">${q.q}</h2>`;
+  
+  q.c.forEach((txt, i) => {
+    const b = document.createElement("button");
+    b.textContent = txt;
+    b.onclick = () => {
+      box.style.display = "none";
+      if(i === q.a) {
+        immunity = 100; // Frames d'invincibilité
         startCountdown();
       } else {
-        state="menu";
-        document.getElementById("menu").style.display="flex";
-      }
-    };
-    box.appendChild(b);
-  });
-  box.style.display="flex";
-}
-
-/* ===== OBSTACLES ===== */
-function spawnObstacle(){
-  const air=Math.random()<0.3;
-  obstacles.push({
-    x:canvas.width+30,
-    y:air?ground()-90:ground()-30,
-    w:24,
-    h:air?22:30
-  });
-}
-
-/* ===== LOOP ===== */
-function loop(time){
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-
-  if(state==="play"){
-    player.vy+=gravity;
-    player.y+=player.vy;
-    if(player.y>=ground()){
-      player.y=ground();
-      player.vy=0;
-      player.jumps=0;
-    }
-
-    if(time-lastSpawn>1400){
-      spawnObstacle();
-      lastSpawn=time;
-    }
-
-    obstacles.forEach(o=>{
-      o.x-=speed;
-      ctx.fillStyle="#e53935";
-      ctx.fillRect(o.x,o.y,o.w,o.h);
-
-      if(immunity<=0 &&
-         player.x+player.r>o.x &&
-         player.x-player.r<o.x+o.w &&
-         player.y+player.r>o.y){
-        showQuestion();
-      }
-    });
-
-    obstacles=obstacles.filter(o=>o.x+o.w>0);
-    score++;
-    if(score%500===0){ level++; speed+=0.5; }
-    if(immunity>0) immunity--;
-  }
-
-  /* PLAYER */
-  ctx.beginPath();
-  ctx.arc(player.x,player.y,player.r,0,Math.PI*2);
-  ctx.fillStyle="#ffb300";
-  ctx.fill();
-  ctx.strokeStyle="#1565c0";
-  ctx.lineWidth=4;
-  ctx.stroke();
-  ctx.fillStyle="#1565c0";
-  ctx.font="bold 12px Arial";
-  ctx.textAlign="center";
-  ctx.textBaseline="middle";
-  ctx.fillText("MLE",player.x,player.y);
-
-  /* HUD */
-  ctx.fillStyle="#0d47a1";
-  ctx.font="bold 16px Arial";
-  ctx.textAlign="left";
-  ctx.fillText("Score : "+score,12,22);
-  ctx.fillText("Niveau : "+level,12,42);
-
-  requestAnimationFrame(loop);
-}
-requestAnimationFrame(loop);
-</script>
-</body>
-</html>
+        state = "menu";
+        document.getElementById("menu").
