--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>MLE Runner - Version Finale</title>
+    <title>MLE Runner - Pro Edition</title>
     <style>
         :root {
             --primary: #0d47a1;
@@ -11,13 +11,12 @@
             --sky: #e3f2fd;
         }
 
-        /* Bloque tout mouvement de page et centre le jeu */
         html, body {
             margin: 0; padding: 0;
             width: 100%; height: 100%;
             overflow: hidden; background: #000;
             display: flex; justify-content: center; align-items: center;
-            position: fixed; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            position: fixed; font-family: 'Segoe UI', sans-serif;
         }
 
         #game-wrapper {
@@ -27,11 +26,10 @@
         }
 
         canvas {
-            /* Ratio 2:1 préservé, s'adapte sans jamais déborder */
             max-width: 100vw;
             max-height: 50vw; 
             background: var(--sky);
-            box-shadow: 0 0 30px rgba(0,0,0,0.7);
+            box-shadow: 0 0 30px rgba(0,0,0,0.8);
             border: 2px solid #fff;
             border-radius: 10px;
             touch-action: none;
@@ -47,43 +45,22 @@
             padding: 15px;
         }
 
-        h1 { font-size: clamp(1.2rem, 5vw, 2.5rem); color: var(--primary); margin: 5px; text-transform: uppercase; }
-        p { font-size: clamp(0.8rem, 3vw, 1.1rem); margin: 5px; color: #444; }
-
+        h1 { font-size: clamp(1.2rem, 5vw, 2.5rem); color: var(--primary); margin: 5px; }
         .btn-play {
-            background: var(--accent);
-            color: var(--primary);
-            border: none;
-            padding: 15px 50px;
-            font-size: clamp(18px, 4vw, 26px);
-            font-weight: 900;
-            border-radius: 50px;
-            cursor: pointer;
-            box-shadow: 0 5px 0 #c79100;
-            margin-top: 15px;
+            background: var(--accent); color: var(--primary); border: none;
+            padding: 15px 50px; font-size: clamp(18px, 4vw, 26px);
+            font-weight: 900; border-radius: 50px; cursor: pointer;
+            box-shadow: 0 5px 0 #c79100; margin-top: 15px;
         }
-
-        .btn-play:active { transform: translateY(4px); box-shadow: 0 1px 0 #c79100; }
 
         .qcm-btn {
-            width: 90%; max-width: 450px;
-            padding: clamp(10px, 2.5vw, 18px);
-            margin: 5px;
-            border: 2px solid var(--primary);
-            background: white;
-            font-weight: bold;
-            border-radius: 12px;
-            font-size: clamp(13px, 2.5vw, 17px);
-            cursor: pointer;
+            width: 90%; max-width: 450px; padding: 12px; margin: 5px;
+            border: 2px solid var(--primary); background: white;
+            font-weight: bold; border-radius: 12px; cursor: pointer;
         }
 
-        #rotate-notice {
-            display: none; background: var(--primary); color: white; z-index: 999;
-        }
-
-        @media (orientation: portrait) {
-            #rotate-notice { display: flex; }
-        }
+        #rotate-notice { display: none; background: var(--primary); color: white; z-index: 999; }
+        @media (orientation: portrait) { #rotate-notice { display: flex; } }
     </style>
 </head>
 <body>
@@ -93,26 +70,24 @@
 
     <div id="menu" class="overlay">
         <h1>MLE RUNNER</h1>
-        <p>Évite les obstacles et réponds aux questions pro !</p>
-        <button id="startBtn" class="btn-play">C'EST PARTI !</button>
-        <p id="bestScore" style="font-size: 0.9rem; margin-top: 15px; font-weight: bold;"></p>
+        <p>Atteins le meilleur score !</p>
+        <button id="startBtn" class="btn-play">JOUER</button>
+        <p id="bestScore" style="margin-top:15px; font-weight:bold;"></p>
     </div>
 
     <div id="questionScreen" class="overlay" style="display:none">
-        <h2 id="qText" style="font-size: 1.2rem; color: var(--primary);">Question Professionnelle</h2>
+        <h2 id="qText" style="color:var(--primary);">Question de Rattrapage</h2>
         <div id="qOptions" style="width:100%; display:flex; flex-direction:column; align-items:center;"></div>
     </div>
 
     <div id="rotate-notice" class="overlay">
-        <h1>📱 TOURNEZ L'ÉCRAN</h1>
-        <p>Le jeu nécessite le mode paysage pour fonctionner.</p>
+        <h1>📱 PAYSAGE REQUIS</h1>
     </div>
 </div>
 
 <script>
     const canvas = document.getElementById('gameCanvas');
     const ctx = canvas.getContext('2d');
-    
     const GAME_WIDTH = 800;
     const GAME_HEIGHT = 400;
     canvas.width = GAME_WIDTH;
@@ -123,6 +98,7 @@
     let highscore = localStorage.getItem('ml_highscore_vfinal') || 0;
     let speed = 6;
     let gameFrame = 0;
+    let obstacles = [];
 
     const player = {
         x: 100, y: 320, r: 25,
@@ -130,33 +106,30 @@
         jumps: 0, groundY: 320
     };
 
-    let obstacles = [];
-    let clouds = Array.from({length: 5}, () => ({
-        x: Math.random() * GAME_WIDTH, y: Math.random() * 120, s: Math.random() * 0.5 + 0.2
-    }));
-
-    // --- NOUVELLES QUESTIONS ---
-    const QUESTIONS = [
+    const QUESTIONS_BASE = [
         {q:"À part l'emploi, la Mission Locale t'aide pour...", c:["Le logement et la santé","Gagner au loto","Réparer ta console"], a:0},
-        {q:"Le CEJ (Contrat d'Engagement Jeune), c'est...", c:["Un abonnement","Un accompagnement avec allocation","Un diplôme de cuisine"], a:1},
-        {q:"Sur un CV, les expériences sont classées...", c:["De la plus ancienne à la récente","De la plus récente à la plus ancienne","Au hasard"], a:1},
+        {q:"Le CEJ (Contrat d'Engagement Jeune), c'est...", c:["Un abonnement","Un accompagnement avec allocation","Un diplôme"], a:1},
+        {q:"Sur un CV, les expériences sont classées...", c:["De la plus ancienne à la récente","De la plus récente à l'ancienne","Au hasard"], a:1},
         {q:"Une lettre de motivation doit être...", c:["Identique pour tous","Personnalisée pour chaque poste","Facultative"], a:1},
         {q:"Quelle tenue choisir pour un entretien ?", c:["Un jogging","Une tenue propre et adaptée","Un déguisement"], a:1},
         {q:"En cas de retard au travail, je dois...", c:["Prévenir le lendemain","Prévenir immédiatement mon chef","Ne rien dire"], a:1},
-        {q:"Le savoir-être en entreprise, c'est...", c:["Ne rien faire","L'attitude et le comportement pro","La force physique"], a:1},
-        {q:"L'inscription à la Mission Locale est...", c:["Payante","Gratuite","Seulement pour les diplômés"], a:1}
+        {q:"Le savoir-être en entreprise, c'est...", c:["Ne rien faire","L'attitude pro","La force physique"], a:1}
     ];
+
+    let currentQuestions = [...QUESTIONS_BASE];
 
     function startGame() {
         state = 'PLAY';
         document.getElementById('menu').style.display = 'none';
         score = 0; speed = 6; obstacles = [];
-        player.y = player.groundY; player.vy = 0; player.jumps = 0;
+        player.y = player.groundY; player.vy = 0;
         gameFrame = 0;
     }
 
-    const startBtn = document.getElementById('startBtn');
-    startBtn.addEventListener('pointerdown', (e) => { e.preventDefault(); startGame(); });
+    document.getElementById('startBtn').addEventListener('pointerdown', (e) => {
+        e.preventDefault();
+        startGame();
+    });
 
     function handleJump(e) {
         if(e) e.preventDefault();
@@ -173,7 +146,14 @@
         state = 'QUESTION';
         const screen = document.getElementById('questionScreen');
         screen.style.display = 'flex';
-        const q = QUESTIONS[Math.floor(Math.random() * QUESTIONS.length)];
+
+        // Recharger les questions si la liste est vide pour éviter les doublons immédiats
+        if (currentQuestions.length === 0) currentQuestions = [...QUESTIONS_BASE];
+
+        // Choisir une question et la retirer de la liste actuelle
+        const qIndex = Math.floor(Math.random() * currentQuestions.length);
+        const q = currentQuestions.splice(qIndex, 1)[0];
+
         document.getElementById('qText').textContent = q.q;
         const opts = document.getElementById('qOptions');
         opts.innerHTML = '';
@@ -188,6 +168,7 @@
                     state = 'PLAY';
                     obstacles = [];
                     player.vy = 0;
+                    // On ne réinitialise pas le score pour permettre de continuer
                 } else {
                     if(score > highscore) localStorage.setItem('ml_highscore_vfinal', score);
                     location.reload();
@@ -200,26 +181,27 @@
     function update() {
         ctx.clearRect(0, 0, GAME_WIDTH, GAME_HEIGHT);
 
-        // Nuages
-        ctx.fillStyle = "white";
-        clouds.forEach(c => {
-            if(state === 'PLAY') c.x -= c.s;
-            if(c.x < -50) c.x = GAME_WIDTH + 50;
-            ctx.beginPath(); ctx.arc(c.x, c.y, 15, 0, Math.PI*2); ctx.fill();
-        });
-
         // Sol
         ctx.fillStyle = "#2e7d32";
         ctx.fillRect(0, GAME_HEIGHT - 40, GAME_WIDTH, 40);
 
         if (state === 'PLAY') {
-            gameFrame++; score++;
-            if (score % 600 === 0) speed += 0.5;
+            gameFrame++;
+            score++;
+
+            // AUGMENTATION DU NIVEAU (Vitesse augmente tous les 500 points)
+            if (score % 500 === 0) speed += 0.8;
+
             player.vy += player.gravity;
             player.y += player.vy;
             if (player.y > player.groundY) { player.y = player.groundY; player.vy = 0; player.jumps = 0; }
-            if (gameFrame % 100 === 0) obstacles.push({ x: GAME_WIDTH + 50, y: GAME_HEIGHT - 75, w: 30, h: 35 });
-            
+
+            // Apparition d'obstacles (plus rapide si la vitesse monte)
+            let spawnRate = Math.max(40, 100 - Math.floor(speed * 2));
+            if (gameFrame % spawnRate === 0) {
+                obstacles.push({ x: GAME_WIDTH + 50, y: GAME_HEIGHT - 75, w: 30, h: 35 });
+            }
+
             obstacles.forEach(o => {
                 o.x -= speed;
                 ctx.fillStyle = "#d32f2f";
@@ -229,28 +211,26 @@
             obstacles = obstacles.filter(o => o.x > -100);
         }
 
-        // --- JOUEUR MLE ---
+        // Joueur MLE
         ctx.save();
         ctx.translate(player.x, player.y);
-        // Cercle bleu extérieur
         ctx.beginPath(); ctx.arc(0, 0, player.r, 0, Math.PI*2); ctx.fillStyle = "#0d47a1"; ctx.fill();
-        // Cercle jaune intérieur
         ctx.beginPath(); ctx.arc(0, 0, player.r-5, 0, Math.PI*2); ctx.fillStyle = "#ffca28"; ctx.fill();
-        // Texte MLE
         ctx.fillStyle = "#0d47a1"; ctx.font = "bold 15px Arial"; ctx.textAlign = "center";
         ctx.textBaseline = "middle"; ctx.fillText("MLE", 0, 1);
         ctx.restore();
 
-        // --- HUD SCORE ---
         if (state === 'PLAY') {
             ctx.fillStyle = "rgba(13, 71, 161, 0.9)";
             ctx.font = "bold 24px Arial"; ctx.textAlign = "center";
             ctx.fillText("SCORE: " + score, GAME_WIDTH / 2, 40);
+            ctx.font = "14px Arial";
+            ctx.fillText("Vitesse: " + speed.toFixed(1), 70, 30);
         }
         requestAnimationFrame(update);
     }
 
-    document.getElementById('bestScore').textContent = `Record actuel : ${highscore}`;
+    document.getElementById('bestScore').textContent = `Record : ${highscore}`;
     update();
 </script>
 </body>
